@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-05-10T16:25:17Z",
+  "timestamp" : "2022-05-11T08:21:29Z",
   "count_outdated" : 261,
   "uniques_outdated" : 139,
-  "count" : 289,
-  "uniques" : 159,
+  "count" : 290,
+  "uniques" : 160,
   "clones" : [
     {
       "timestamp": "2022-04-28T00:00:00Z",
@@ -67,6 +67,13 @@
       "count_minmax": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2022-05-11T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
