@@ -1,3 +1,9 @@
+2022-05-11T08:21:29Z:
+* notice: last 14d: all unq: 29 13
+* notice: prev accum: outdated-all outdated-unq / all unq: 261 139 / 289 159
+* notice: next accum: outdated-all outdated-unq / all unq: 261 139 / 290 160
+* notice: prev json diff // prev day diff: unq all: +1 +1 / -0 -0 // +1 +1 / -0 -0
+
 2022-05-10T16:25:17Z:
 * notice: last 14d: all unq: 28 13
 * notice: prev accum: outdated-all outdated-unq / all unq: 261 139 / 288 158
